--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Listando</string>
     <string name="escolha_das_opcoes">Escolha das Opcoes</string>
     <string name="lista">Lista</string>
-    <string name="falta_iniciar">Falta Iniciar</string>
+    <string name="falta_iniciar">Iniciar</string>
     <string name="fazendo">Fazendo</string>
     <string name="feito">Feito</string>
     <string name="visualizacao_das_coisas">Visualizacao das coisas</string>
