--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
     <string name="botao_de_apagar">Botao de apagar</string>
     <string name="nenhuma_tarefa">Nenhuma tarefa foi encontrada</string>
     <string name="inserar_novas_tarefas">Insira novas tarefas no botao \"mais\"</string>
+    <string name="excluir_item">Excluir item</string>
+    <string name="certeza_excluir">Você tem certeza de que deseja excluir este item?</string>
+    <string name="sim">Sim</string>
+    <string name="removido_sucesso">Removido com Sucesso</string>
+    <string name="nao">Não</string>
+    <string name="beleza">Beleza! :)</string>
 </resources>
